# Quinjet

./: README.md
Altium-Design-Files/Mini-Drone/: Flight_Controller.PcbDoc  Flight_Controller.SchDoc  Mini-Drone-FC.PrjPcb
Altium-Design-Files/Mini-Drone-Remote/: Mini-Drone-Remote.PrjPcb  Remote.PcbDoc  Remote.SchDoc
Altium-Design-Files/Mini-Drone-Remote/__Previews/: Remote.SchDocPreview  Sheet1.SchDocPreview
firmware/: CMakeLists.txt  app.overlay  prj.conf  prj_prx.conf  prj_ptx.conf
firmware/flight_controller/: Architecture.md  CMakeLists.txt  app.overlay  prj.conf  prj_prx.conf
firmware/flight_controller/include/: flight_control.h  radio_esb.h
firmware/flight_controller/include/drivers/: imu_bmi270.h  motor_pwm.h
firmware/flight_controller/include/modules/: motor_mixer.h  pid.h  sensor_fusion.h
firmware/flight_controller/src/: flight_control.c  main.c  radio_esb.c
firmware/flight_controller/src/drivers/: imu_bmi270.c  motor_pwm.c
firmware/flight_controller/src/modules/: motor_mixer.c  pid.c  sensor_fusion.c
firmware/remote_controller/: Architecture.md  CMakeLists.txt  app.overlay  prj.conf  prj_ptx.conf
firmware/remote_controller/include/: radio_esb.h  rc_state_machine.h
firmware/remote_controller/include/drivers/: analog_joystick.h  decode_joystick.h  motor_pwm.h
firmware/remote_controller/src/: main.c  radio_esb.c  rc_state_machine.c
firmware/remote_controller/src/drivers/: analog_joystick.c  motor_pwm.c
firmware/remote_controller/src/modules/: decode_joystick.c
firmware/src/: flight_control.c  main.c  radio_esb.c
(+5 files in other folders)
